--- a/main.html
+++ b/main.html
@@ -71,7 +71,7 @@
 		</main>
 
 		<aside>
-			<div class="contact-info">
+			<div id="contact-info" class="contact-info">
 				<h2>Contacto</h2>
 				<ul>
 					<li><a href="https://wa.me/56987585930">WhatsApp</a></li>
@@ -85,7 +85,7 @@
 				</ul>
 			</div>
 
-			<div class="education">
+			<div id="education" class="education">
 				<h2 class="section-title">Antecedentes Académicos</h2>
 				<div id="university" class="info-container">
 					<h3 class="subtitle">
@@ -104,6 +104,35 @@
 						Media
 					</p>
 				</div>
+			</div>
+
+			<div id="certifications">
+				<ul>
+					<li>Licencia Clase B: Al día</li>
+					<li>Perito Tasador MOP</li>
+					<li>HACCP</li>
+					<li>Freshcare</li>
+					<li>Agricultural Chemical User Permit - ACUP</li>
+					<li>Python for Data Analysis - freeCodeCamp.org</li>
+					<li>Scientific Computing with Python - freeCodeCamp.org</li>
+				</ul>
+			</div>
+
+			<div id="skills">
+				<ul>
+					<li>MS Excel - Avanzado</li>
+					<li>Análisis de datos con Python</li>
+					<li>SQL</li>
+					<li>Xero - Usuario</li>
+					<li>Priva Maximizer - Usuario</li>
+				</ul>
+			</div>
+
+			<div id="languages">
+				<ul>
+					<li>Inglés - Fluido</li>
+					<li>Español - Nativo</li>
+				</ul>
 			</div>
 		</aside>
 	</body>
