--- a/main.html
+++ b/main.html
@@ -9,11 +9,11 @@
 	</head>
 	<header>
 		<h1><span>Paulo Moore</span></h1>
-		<p>Ingeniero Agrónomo UC</p>
+		<p>Ingeniero Agrónomo - Economía Agraria UC</p>
 	</header>
 	<body>
 		<main>
-			<div id="profile">
+			<div id="profile" class="main-element">
 				<p class="profile-text">
 					Ingeniero Agrónomo UC con mención en Economía Agraria con un
 					año de experiencia como Tasador Agrícola y tres años como
@@ -24,8 +24,8 @@
 				</p>
 			</div>
 
-			<div class="work-experience">
-				<h2>Experiencia Laboral</h2>
+			<div class="work-experience" class="main-element">
+				<h2 class="section-title">Experiencia Laboral</h2>
 				<div id="herbs-only" class="info-container">
 					<h3 class="subtitle">
 						Operations Manager
@@ -68,46 +68,104 @@
 					</p>
 				</div>
 			</div>
+
+			<div id="contact-info" class="main-element">
+				<h2 class="section-title">Contacto</h2>
+				<ul class="info-container">
+					<li>
+						<?xml version="1.0" ?><!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
+						<svg
+							height="100%"
+							style="
+								fill-rule: evenodd;
+								clip-rule: evenodd;
+								stroke-linejoin: round;
+								stroke-miterlimit: 2;
+							"
+							version="1.1"
+							viewBox="0 0 512 512"
+							width="100%"
+							xml:space="preserve"
+							xmlns="http://www.w3.org/2000/svg"
+							xmlns:serif="http://www.serif.com/"
+							xmlns:xlink="http://www.w3.org/1999/xlink"
+						>
+							<path
+								d="M449.446,0c34.525,0 62.554,28.03 62.554,62.554l0,386.892c0,34.524 -28.03,62.554 -62.554,62.554l-386.892,0c-34.524,0 -62.554,-28.03 -62.554,-62.554l0,-386.892c0,-34.524 28.029,-62.554 62.554,-62.554l386.892,0Zm-58.673,127.703c-33.842,-33.881 -78.847,-52.548 -126.798,-52.568c-98.799,0 -179.21,80.405 -179.249,179.234c-0.013,31.593 8.241,62.428 23.927,89.612l-25.429,92.884l95.021,-24.925c26.181,14.28 55.659,21.807 85.658,21.816l0.074,0c98.789,0 179.206,-80.413 179.247,-179.243c0.018,-47.895 -18.61,-92.93 -52.451,-126.81Zm-126.797,275.782l-0.06,0c-26.734,-0.01 -52.954,-7.193 -75.828,-20.767l-5.441,-3.229l-56.386,14.792l15.05,-54.977l-3.542,-5.637c-14.913,-23.72 -22.791,-51.136 -22.779,-79.287c0.033,-82.142 66.867,-148.971 149.046,-148.971c39.793,0.014 77.199,15.531 105.329,43.692c28.128,28.16 43.609,65.592 43.594,105.4c-0.034,82.149 -66.866,148.983 -148.983,148.984Zm81.721,-111.581c-4.479,-2.242 -26.499,-13.075 -30.604,-14.571c-4.105,-1.495 -7.091,-2.241 -10.077,2.241c-2.986,4.483 -11.569,14.572 -14.182,17.562c-2.612,2.988 -5.225,3.364 -9.703,1.12c-4.479,-2.241 -18.91,-6.97 -36.017,-22.23c-13.314,-11.876 -22.304,-26.542 -24.916,-31.026c-2.612,-4.484 -0.279,-6.908 1.963,-9.14c2.016,-2.007 4.48,-5.232 6.719,-7.847c2.24,-2.615 2.986,-4.484 4.479,-7.472c1.493,-2.99 0.747,-5.604 -0.374,-7.846c-1.119,-2.241 -10.077,-24.288 -13.809,-33.256c-3.635,-8.733 -7.327,-7.55 -10.077,-7.688c-2.609,-0.13 -5.598,-0.158 -8.583,-0.158c-2.986,0 -7.839,1.121 -11.944,5.604c-4.105,4.484 -15.675,15.32 -15.675,37.364c0,22.046 16.048,43.342 18.287,46.332c2.24,2.99 31.582,48.227 76.511,67.627c10.685,4.615 19.028,7.371 25.533,9.434c10.728,3.41 20.492,2.929 28.209,1.775c8.605,-1.285 26.499,-10.833 30.231,-21.295c3.732,-10.464 3.732,-19.431 2.612,-21.298c-1.119,-1.869 -4.105,-2.99 -8.583,-5.232Z"
+							/>
+						</svg>
+
+						+56987585930
+					</li>
+					<li>
+						<?xml version="1.0" ?><!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
+						<svg
+							height="100%"
+							style="
+								fill-rule: evenodd;
+								clip-rule: evenodd;
+								stroke-linejoin: round;
+								stroke-miterlimit: 2;
+							"
+							version="1.1"
+							viewBox="0 0 512 512"
+							width="100%"
+							xml:space="preserve"
+							xmlns="http://www.w3.org/2000/svg"
+							xmlns:serif="http://www.serif.com/"
+							xmlns:xlink="http://www.w3.org/1999/xlink"
+						>
+							<path
+								d="M449.446,0c34.525,0 62.554,28.03 62.554,62.554l0,386.892c0,34.524 -28.03,62.554 -62.554,62.554l-386.892,0c-34.524,0 -62.554,-28.03 -62.554,-62.554l0,-386.892c0,-34.524 28.029,-62.554 62.554,-62.554l386.892,0Zm-288.985,423.278l0,-225.717l-75.04,0l0,225.717l75.04,0Zm270.539,0l0,-129.439c0,-69.333 -37.018,-101.586 -86.381,-101.586c-39.804,0 -57.634,21.891 -67.617,37.266l0,-31.958l-75.021,0c0.995,21.181 0,225.717 0,225.717l75.02,0l0,-126.056c0,-6.748 0.486,-13.492 2.474,-18.315c5.414,-13.475 17.767,-27.434 38.494,-27.434c27.135,0 38.007,20.707 38.007,51.037l0,120.768l75.024,0Zm-307.552,-334.556c-25.674,0 -42.448,16.879 -42.448,39.002c0,21.658 16.264,39.002 41.455,39.002l0.484,0c26.165,0 42.452,-17.344 42.452,-39.002c-0.485,-22.092 -16.241,-38.954 -41.943,-39.002Z"
+							/>
+						</svg>
+						/paulomoore
+					</li>
+					<li>
+						<?xml version="1.0" ?><svg
+							style="enable-background: new 0 0 24 24"
+							version="1.1"
+							viewBox="0 0 24 24"
+							xml:space="preserve"
+							xmlns="http://www.w3.org/2000/svg"
+							xmlns:xlink="http://www.w3.org/1999/xlink"
+						>
+							<g id="info" />
+							<g id="icons">
+								<path
+									d="M20,3H4C1.8,3,0,4.8,0,7v10c0,2.2,1.8,4,4,4h16c2.2,0,4-1.8,4-4V7C24,4.8,22.2,3,20,3z M21.6,8.8l-7.9,5.3   c-0.5,0.3-1.1,0.5-1.7,0.5s-1.2-0.2-1.7-0.5L2.4,8.8C2,8.5,1.9,7.9,2.2,7.4C2.5,7,3.1,6.9,3.6,7.2l7.9,5.3c0.3,0.2,0.8,0.2,1.1,0   l7.9-5.3c0.5-0.3,1.1-0.2,1.4,0.3C22.1,7.9,22,8.5,21.6,8.8z"
+									id="email"
+								/>
+							</g>
+						</svg>
+						pimoore@uc.cl
+					</li>
+				</ul>
+			</div>
 		</main>
 
 		<aside>
-			<div id="contact-info" class="contact-info">
-				<h2>Contacto</h2>
-				<ul>
-					<li><a href="https://wa.me/56987585930">WhatsApp</a></li>
-					<li>
-						<a href="https://www.linkedin.com/in/paulomoore/"
-							>LinkedIn</a
-						>
-					</li>
-					<li><a href="mailto:pimoore@uc.cl">Email</a></li>
-					<li><a href="https://www.paulomoore.cl">Sitio Web</a></li>
-				</ul>
-			</div>
-
-			<div id="education" class="education">
-				<h2 class="section-title">Antecedentes Académicos</h2>
+			<div id="education" class="aside-element">
+				<h2 class="section-title">Educación</h2>
 				<div id="university" class="info-container">
 					<h3 class="subtitle">
 						Pontificia Universidad Catolica de Chile
 					</h3>
 					<p class="description">
-						Ingeniero Agrónomo con mención en Economía Agraria.
+						Ingeniero Agrónomo <br />
 						Titulado en mayo de 2014.
 					</p>
 				</div>
 
 				<div id="high-school" class="info-container">
 					<h3 class="subtitle">Instituto Nacional</h3>
-					<p class="description">
-						7° y 8° de Educación Básica y 1° a 4° años de Educación
-						Media
-					</p>
+					<p class="description">Educación Media.</p>
 				</div>
 			</div>
 
-			<div id="certifications">
-				<ul>
+			<div id="certifications" class="aside-element">
+				<h2 class="section-title">Certificaciones</h2>
+				<ul class="info-container">
 					<li>Licencia Clase B: Al día</li>
 					<li>Perito Tasador MOP</li>
 					<li>HACCP</li>
@@ -118,8 +176,9 @@
 				</ul>
 			</div>
 
-			<div id="skills">
-				<ul>
+			<div id="skills" class="aside-element">
+				<h2 class="section-title">Habilidades Profesionales</h2>
+				<ul class="info-container">
 					<li>MS Excel - Avanzado</li>
 					<li>Análisis de datos con Python</li>
 					<li>SQL</li>
@@ -128,8 +187,9 @@
 				</ul>
 			</div>
 
-			<div id="languages">
-				<ul>
+			<div id="languages" class="aside-element">
+				<h2 class="section-title">Idiomas</h2>
+				<ul class="info-container">
 					<li>Inglés - Fluido</li>
 					<li>Español - Nativo</li>
 				</ul>
