--- a/main.html
+++ b/main.html
@@ -26,6 +26,19 @@
 
 			<div class="work-experience" class="main-element">
 				<h2 class="section-title">Experiencia Laboral</h2>
+				<div id="freelance-appraiser" class="info-container">
+					<h3 class="subtitle">
+						Tasador Independiente
+						<span class="dates">[septiembre 2019 a la fecha]</span>
+					</h3>
+					<p class="description">
+						Elaboración de informes de tasación de bienes tanto
+						agrícolas como urbanos a partir de información de
+						mercado obtenida en los respectivos conservadores de
+						bienes raíces.<br />Zona de cobertura: RM, Región de
+						O'Higgins y Región de Valparaíso.
+					</p>
+				</div>
 				<div id="herbs-only" class="info-container">
 					<h3 class="subtitle">
 						Operations Manager
@@ -53,18 +66,6 @@
 						todos los antecedentes relevantes del inmueble. Zona de
 						cobertura: RM, Región de O'Higgins y Región de
 						Valparaíso.
-					</p>
-				</div>
-
-				<div id="freelance-appraiser" class="info-container">
-					<h3 class="subtitle">
-						Tasador Independiente
-						<span class="dates">[septiembre 2019 a la fecha]</span>
-					</h3>
-					<p class="description">
-						Elaboración de informes de tasación de bienes tanto
-						agrícolas como urbanos. El <br />Zona de cobertura: RM,
-						Región de O'Higgins y Región de Valparaíso.
 					</p>
 				</div>
 			</div>
@@ -95,7 +96,7 @@
 							/>
 						</svg>
 
-						+56987585930
+						+56911111111
 					</li>
 					<li>
 						<?xml version="1.0" ?><!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
@@ -138,7 +139,7 @@
 								/>
 							</g>
 						</svg>
-						pimoore@uc.cl
+						email@email.com
 					</li>
 				</ul>
 			</div>
